# calcloud-ml-dashboard

./: .bandit.yaml  .gitignore  Dockerfile  README.rst  conftest.py  requirements.txt  setup.cfg  setup.py  tox.ini
calcloud-ai/: functions.py  lambda_predict.py
calcloud-ai/test_data/: event.json  inputFile.txt
calcloud-ai/test_data/acs/: event.json  inputFile.txt  j8c481020_MemModelFeatures.txt
calcloud-ai/test_data/cos/: event.json  inputFile.txt  ldmk01010_MemModelFeatures.txt
calcloud-ai/test_data/stis/: event.json  inputFile.txt  oa8b11030_MemModelFeatures.txt
calcloud-ai/test_data/wfc3/: event.json  id6q01020_MemModelFeatures.txt  inputFile.txt
calcloudML/: __init__.py  app.py  cmx.py  features.py  load_data.py  predictor.py  roc_auc.py  scoring.py
calcloudML/assets/: header.css  style.css  typography.css
calcloudML/data/: pt_transform  pt_transform-v0  scrape.sh  training_metadata.csv
calcloudML/data/2021-05-06-1620351000/: pt_transform
calcloudML/data/2021-05-11-1620740441/: batch.csv  latest.csv  pt_transform
calcloudML/data/2021-05-11-1620740441/results/: mem_bin-results.csv
calcloudML/data/2021-05-13-1620929899/: pt_transform
calcloudML/data/2021-05-13-1620929899/results/: cmx  memory-results.csv  wallclock-results.csv
calcloudML/data/2021-05-15-1621096666/: pt_transform
calcloudML/data/2021-05-15-1621096666/results/: wallclock-results.csv
calcloudML/data/other/: TestData.json  batch-511-new.csv  bin3.csv  master.csv  pred_missing.csv  test_bins.csv  test_features.csv  test_memory.csv  test_wallclock.csv  train_bins.csv  train_memory.csv  train_wallclock.csv  training_loss.csv  training_results.csv
calcloudML/data/other/ddb_data/: batch.csv  latest.csv  pt_transform
calcloudML/makefigs/: __init__.py  clf_weights.py  cmx.py  features.py  load_data.py  nodegraph.py  predictor.py  roc_auc.py  scoring.py
calcloudML/models/mem_clf/: saved_model.pb
calcloudML/models/mem_reg/: saved_model.pb
calcloudML/models/wall_reg/: saved_model.pb
calcloudML/tests/: __init__.py  test_example.py
docs/: data-dictionary.rst  index.rst
externalmods/: hst.py
externalmods/Inference/: Dockerfile
externalmods/Learning/: Dockerfile  io.py  main.py  prep.py  train.py  validate.py
(+130 files in other folders)
